@@ -1122,10 +1122,10 @@ public class Cascade implements UnitOfWork<CascadeStats>
     }
 
   /**
-   * Class SafeFlowListener safely calls a wrapped FlowListener.
+   * Class SafeCascadeListener safely calls a wrapped CascadeListener.
    * <p/>
    * This is done for a few reasons, the primary reason is so exceptions thrown by the Listener
-   * can be caught by the calling Thread. Since Flow is asynchronous, much of the work is done in the run() method
+   * can be caught by the calling Thread. Since Cascade is asynchronous, much of the work is done in the run() method
    * which in turn is run in a new Thread.
    */
   private class SafeCascadeListener implements CascadeListener
@@ -1144,7 +1144,7 @@ public class Cascade implements UnitOfWork<CascadeStats>
       {
       try
         {
-        cascadeListener.onStarting( null );
+        cascadeListener.onStarting( cascade );
         }
       catch( Throwable throwable )
         {
@@ -1156,7 +1156,7 @@ public class Cascade implements UnitOfWork<CascadeStats>
       {
       try
         {
-        cascadeListener.onStopping( null );
+        cascadeListener.onStopping( cascade );
         }
       catch( Throwable throwable )
         {
@@ -1168,7 +1168,7 @@ public class Cascade implements UnitOfWork<CascadeStats>
       {
       try
         {
-        cascadeListener.onCompleted( null );
+        cascadeListener.onCompleted( cascade );
         }
       catch( Throwable throwable )
         {
@@ -1180,7 +1180,7 @@ public class Cascade implements UnitOfWork<CascadeStats>
       {
       try
         {
-        return cascadeListener.onThrowable( null, flowThrowable );
+        return cascadeListener.onThrowable( cascade, flowThrowable );
         }
       catch( Throwable throwable )
         {
@@ -1194,7 +1194,7 @@ public class Cascade implements UnitOfWork<CascadeStats>
       {
       this.throwable = throwable;
 
-      logWarn( String.format( "flow listener %s threw throwable", cascadeListener ), throwable );
+      logWarn( String.format( "cascade listener %s threw throwable", cascadeListener ), throwable );
 
       // stop this flow
       stop();
