@@ -2,6 +2,8 @@ Cascading Change Log
 
 2.1.5 [unreleased]
 
+  Fixed issue where c.c.CascadeListener was receiving null as the c.c.Cascade parameter.
+
 2.1.4
 
   Added ability to capture frameworks used in an application via c.p.AppProps.
